micronet: add Dockerfile

--- a/contrib/micronet/Makefile
+++ b/contrib/micronet/Makefile
@@ -1,10 +1,10 @@
-.PHONY: all clean run-server vgd-server
+.PHONY: all clean run-server vgd-server docker
 
 MICRONET=bin/micronet
 SRC=$(wildcard src/*.c) obj/server.lua.c
 HDR=$(wildcard src/*.h)
 
-CFLAGS=-Wall -Wextra -g -llua
+CFLAGS=-Wall -Wextra -g -llua -I/usr/include/lua5.3 -L/usr/lib/lua5.3
 
 all: $(MICRONET)
 
@@ -14,12 +14,15 @@ all: $(MICRONET)
 
 obj/server.lua.c: src/server.lua scripts/file2buf.py
 	@mkdir -p obj
-	luac -o obj/server.luac src/server.lua
+	luac5.3 -o obj/server.luac src/server.lua
 	scripts/file2buf.py obj/server.luac _luacode_server > obj/server.lua.c
 
 $(MICRONET): $(SRC) $(HDR)
 	@mkdir -p bin
 	$(CC) -o $(MICRONET) $(SRC) $(CFLAGS)
+
+docker:
+	docker build -t wirehub/micronet .
 
 clean:
 	rm -rf obj bin
