Modify /etc/hosts with trusted peers
When a WireHub network is up, trusted peers with an hostname are added
to /etc/hosts to make the system able to resolve WireHub peers hostname.

This approach may be unsecure, as it modifiy /etc/hosts. Race conditions
are possible. It is not advised to enable this feature outside a
container.

For now, this feature is by default disabled. To enable it, set the
environment variable `WH_EXPERIMENTAL_MODIFY_HOSTS` to `true`. The
Docker sandbox has the environment variable set.

NOTE: other approaches were considered, like NSS, which appears to not
be easily supported in Alpine Linux.

--- a/docker/Dockerfile.sandbox
+++ b/docker/Dockerfile.sandbox
@@ -27,6 +27,8 @@ ENV LUA_PATH "/root/wh/src/?.lua"
 ENV LUA_CPATH "/root/wh/.obj/?.so"
 ENV PATH "/root/wh/docker:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 
+ENV WH_EXPERIMENTAL_MODIFY_HOSTS true
+
 RUN ln -s /root/wh/docker/sandbox.bashrc /root/.bashrc
 RUN wh completion get-bash > /usr/share/bash-completion/completions/wh
 
